--- a/.config/dispatcher.json.example
+++ b/.config/dispatcher.json.example
@@ -1,4 +1,5 @@
 {
     "QUEUE_SIZE": 1024,
-    "MAX_CONTAINER_NUMBER": 500
+    "MAX_CONTAINER_NUMBER": 500,
+    "HTTP_HANDLER_URL": "http://localhost:1450"
 }
