--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -19,11 +19,12 @@ jobs:
     - name: Install sandbox requirements
       run: |
         ./build.sh
+        pip install -r requirements.txt
     - name: YAPF
       run: |
         pip install yapf
         yapf . -rd
     - name: Unit test
       run: |
-        pip install --requirement ./tests/requirements.txt
+        pip install -r tests/requirements.txt
         pytest
